sonar cloud fix